# Tieto

./: README.md
kielbkam/project3/: CMakeLists.txt  ClangTools.cmake  make.sh
kielbkam/project3/inc/: WordsGenerator.hpp
kielbkam/project3/src/: WordsGenerator.cpp  main.cpp
kielbkam/project3/tests/: CMakeLists.txt  WordsGeneratorTests.cpp
